outputs_20260330-035133-01ba2c4b/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\include/IfxEgtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c:15:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\include/IfxPort.h:89:5: error: unknown type name 'IfxPort_PadDriver'
   89 |     IfxPort_PadDriver padDriver;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c:48:24: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   48 | #define PHASE_U_LS   (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT) /* Validated */
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c:104:62: note: in expansion of macro 'PHASE_U_LS'
  104 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c:48:24: note: each undeclared identifier is reported only once for each function it appears in
   48 | #define PHASE_U_LS   (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT) /* Validated */
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c:104:62: note: in expansion of macro 'PHASE_U_LS'
  104 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\src\egtm_atom_3_phase_inverter_pwm.c:143:26: error: 'IfxSrc_VmId_0' undeclared (first use in this function); did you mean 'IfxSrc_VmId'?
  143 |     irqCfg.vmId        = IfxSrc_VmId_0;
      |                          ^~~~~~~~~~~~~
      |                          IfxSrc_VmId

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\include/IfxEgtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_vy21da59\include/IfxPort.h:89:5: error: unknown type name 'IfxPort_PadDriver'
   89 |     IfxPort_PadDriver padDriver;
      |     ^~~~~~~~~~~~~~~~~
